Save plaintext password when user logs in using new ash login UI

BUG=chromium:848017
TEST=run unit tests, manual test on kevin, autotest on kevin

Change-Id: I713940fc7e0f76e09385cf0691c536a0ff9227ea
Reviewed-on: https://chromium-review.googlesource.com/1079800
Commit-Queue: May Lippert <maybelle@chromium.org>
Reviewed-by: Achuith Bhandarkar <achuith@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563162}
Former-commit-id: e5bb693f880e6504e473993bd11e8d57101c004c